@@ -64,6 +64,8 @@ string calc_arg;
 bool do_timeout, check_expression_position;
 gint expression_position;
 
+QalculateDate last_version_check_date;
+
 static GOptionEntry options[] = {
 	{"new-instance", 'n', 0, G_OPTION_ARG_NONE, NULL, N_("Start a new instance of the application"), NULL},
 	{G_OPTION_REMAINING, 0, 0, G_OPTION_ARG_STRING_ARRAY, NULL, N_("Expression to calculate"), N_("EXPRESSION")},
@@ -198,7 +200,7 @@ void create_application(GtkApplication *app) {
 
 	//check for calculation errros regularly
 	do_timeout = true;
-	g_timeout_add(1000, on_display_errors_timeout, NULL);
+	g_timeout_add_seconds(1, on_display_errors_timeout, NULL);
 	
 	check_expression_position = true;
 	expression_position = 1;
@@ -266,6 +268,13 @@ void create_application(GtkApplication *app) {
 #endif
 	gtk_accel_map_load(gstr);
 	g_free(gstr);
+	
+#ifdef _WIN32
+	QalculateDate next_version_check_date(last_version_check_date);
+	next_version_check_date.addDays(14);
+	if(!next_version_check_date.isFutureDate()) g_idle_add(on_check_version_idle, NULL);
+#endif
+	
 }
 
 static void qalculate_activate(GtkApplication *app) {
