@@ -1,3 +1,7 @@
+2017-09-15 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Version check on Windows
+
 2017-09-08 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Proper root and abs display
